k8s/dev/tls/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: circleguard-gateway-ingress
  namespace: circleguard-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - circleguard.local
      secretName: circleguard-gateway-tls-secret
  rules:
    - host: circleguard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: circleguard-gateway-service
                port:
                  number: 80
